--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,24 @@
 // Mixins in here
+
+.button(@width, @height, @bg-color, @font-color, @font-size) {
+  width: @width;
+  height: @height;
+  background-color: @bg-color;
+  color: @font-color;
+  border: 1px solid @silver;
+  cursor: pointer;
+  font-size: @font-size;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+
+  @media @mobile {
+    width: 100%;
+  }
+
+  &:hover {
+    background: @white;
+    color: @button-bg;
+  }
+}
