--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,45 @@
 // Navigation Styles here
+
+.navigation {
+  border-bottom: 2px dashed @navigation-border;
+  width: 100%;
+  height: 90px;
+  background: @main-bg;
+  position: fixed;
+
+  .nav-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    @media @mobile {
+      flex-wrap: wrap;
+      justify-content: center;
+      padding-top: 10px;
+    }
+
+    h1 {
+      @media @mobile {
+        font-size: 3rem;
+      }
+    }
+
+    nav {
+      width: 350px;
+      display: flex;
+      justify-content: space-evenly;
+
+      @media @mobile {
+        width: 100%;
+        justify-content: space-around;
+      }
+
+      a {
+        font-size: 1.6rem;
+        color: @font-color;
+        text-decoration: none;
+      }
+    }
+  }
+}
